--- a/logistic-html/index-7.html
+++ b/logistic-html/index-7.html
@@ -20,12 +20,14 @@
   	<link rel="stylesheet" href="assets/css/main.css">
   	<link rel="stylesheet" href="assets/css/style.css">
   </head>
-  <body class="home-7">
+  <body class="laa-home bg-default" data-background="assets/imgs/bg/body-bg.png">
 
   	<div id="preloader"></div>
 
 	<!-- header-start -->
-	<div class="laa-header-1-area">
+	<div class="laa-header-1-area laa-scn-margin">
+
+		<!-- top-header -->
 		<div class="laa-header-1-top">
 			<div class="container laa-container-1">
 				<div class="laa-header-1-top-flex d-flex align-items-center">
@@ -85,7 +87,7 @@
 					</button>
 
 					<div class="laa-lang-switch">
-						<input id="language-toggle" class="check-toggle check-toggle-round-flat" type="checkbox">
+						<input id="language-toggle" aria-label="name" class="check-toggle check-toggle-round-flat" type="checkbox">
 						<label for="language-toggle"></label>
 						<span class="on">en</span>
 						<span class="off">ar</span>
@@ -97,8 +99,457 @@
 			</div>
 		</div>
 
+		<!-- main-header -->
+		<div class="container laa-container-1">
+			<div class="laa-header-1-main">
+
+				<!-- logo -->
+				<a class="laa-header-main-logo" href="index-7.html" aria-label="name">
+					<img src="assets/imgs/logo/logo-1.svg" alt="">
+				</a>
+
+				<!-- menu -->
+				<nav class="laa-main-navigation d-none d-lg-block laa-mr-auto">
+					<ul id="main-nav" class="nav navbar-nav clearfix">
+						<li class="dropdown">
+							<a class="is-active" href="!#">home</a>
+							<ul class="dropdown-menu clearfix">
+								<li>
+									<a  href="index.html">home page 1</a>
+								</li>
+								<li>
+									<a href="index-2.html">home page 2</a>
+								</li>
+								<li>
+									<a href="index-3.html">home page 3</a>
+								</li>
+								<li>
+									<a href="index-4.html">home page 4</a>
+								</li>
+								<li>
+									<a href="index-5.html">home page 5</a>
+								</li>
+								<li>
+									<a href="index-6.html">home page 6</a>
+								</li>
+								<li>
+									<a class="is-active" href="index-7.html">home page 7</a>
+								</li>
+							</ul>
+						</li>
+						<li class="dropdown">
+							<a href="!#">about</a>
+							<ul class="dropdown-menu clearfix">
+								<li>
+									<a href="#">about one</a>
+								</li>
+								<li>
+									<a href="#">about  two</a>
+								</li>
+								<li>
+									<a href="#">about  three</a>
+								</li>
+								<li>
+									<a href="#">about  details</a>
+								</li>
+							</ul>
+						</li>
+						<li class="dropdown">
+							<a href="!#">services</a>
+							<ul class="dropdown-menu clearfix">
+								<li>
+									<a href="#">services one</a>
+								</li>
+								<li>
+									<a href="#">services  two</a>
+								</li>
+								<li>
+									<a href="#">services  three</a>
+								</li>
+							</ul>
+						</li>
+						<li class="dropdown">
+							<a href="!#">pages</a>
+							<ul class="dropdown-menu clearfix">
+								<li class="dropdown">
+									<a href="!#">projects</a>
+									<ul class="dropdown-menu clearfix">
+										<li>
+											<a href="#">projects one</a>
+										</li>
+										<li>
+											<a href="#">projects two</a>
+										</li>
+										<li>
+											<a href="#">projects details</a>
+										</li>
+									</ul>
+								</li>
+								<li>
+									<a href="prices.html">prices</a>
+								</li>
+								<li>
+									<a href="gallery.html">gallery</a>
+								</li>
+								<li>
+									<a href="privacy-policy.html">privacy policy</a>
+								</li>
+								<li>
+									<a href="error.html">404</a>
+								</li>
+							</ul>
+						</li>
+						<li>
+							<a href="!#">blog</a>
+						</li>
+						<li>
+							<a href="#">contact</a>
+						</li>
+					</ul>
+				</nav>
+
+				<!-- action-btn -->
+				<div class="laa-header-1-main-action-link d-flex align-items-center justify-content-end">
+
+					<!-- pr-btn -->
+					<a href="#" aria-label="name" class="laa-pr-btn-1">
+						<span class="text" data-back="Get a Quote" data-front="Get a Quote"></span>
+						<span class="icon">
+							<i class="fas fa-chevron-right"></i>
+							<i class="fas fa-chevron-right"></i>
+						</span>
+					</a>
+
+					<!-- sidebar-btn -->
+					<button type="button" aria-label="name" class="laa-menu-btn-1 offcanvas_toggle">
+						<span></span>
+						<span></span>
+						<span></span>
+						<span></span>
+						<span></span>
+						<span></span>
+						<span></span>
+						<span></span>
+						<span></span>
+					</button>
+				</div>
+			</div>
+		</div>
+
+
 	</div>
 	<!-- header-end -->
+
+	<!-- hero-start -->
+	<div class="laa-hero-1-area laa-scn-margin">
+
+		<!-- slider -->
+		<div class="laa-hero-1-slider">
+			<div class="swiper-container laa-hero-1-active fix">
+				<div class="swiper-wrapper">
+					<!-- single-item -->
+					<div class="swiper-slide">
+						<div class="laa-hero-1-slider-item-bg">
+							<div class="item-bg img-cover fix ">
+								<img src="assets/imgs/hero/h1-img-1.png" alt="">
+							</div>
+
+							<div class="container laa-container-1">
+								<div class="laa-hero-1-slider-item">
+
+									<div class="laa-hero-1-slider-item-content">
+		
+										<h5 class="laa-subtitle-1 hero-subtitle">Logistic Transportation Inc</h5>
+										<h1 class="laa-scn-title-1 hero-title">Your Dedicated Partner in Logistics</h1>
+										<p class="laa-para-1 hero-disc" >Streamlining your logistics with tailored transportation solutions, ensuring timely deliveries and exceptional service worldwide.</p>
+		
+										<div class="btn-box">
+											<a href="#" aria-label="name" class="laa-pr-btn-1">
+												<span class="text" data-back="Learn More" data-front="Learn More"></span>
+												<span class="icon">
+													<i class="fas fa-chevron-right"></i>
+													<i class="fas fa-chevron-right"></i>
+												</span>
+											</a>
+										</div>
+		
+									</div>
+								</div>
+							</div>
+
+							<div class="bg-shape">
+								<svg width="210" height="140" viewBox="0 0 210 140" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<rect opacity="0.2" x="70" y="70" width="70" height="70" fill="white"/>
+									<path opacity="0.32" d="M0 70H70V140H20C8.9543 140 0 131.046 0 120V70Z" fill="#222222"/>
+									<rect opacity="0.06" x="140" y="70" width="70" height="70" fill="white"/>
+									<rect opacity="0.1" x="70" width="70" height="70" fill="white"/>
+								</svg>
+							</div>
+						</div>
+					</div>
+					<!-- single-item -->
+					<div class="swiper-slide">
+						<div class="laa-hero-1-slider-item-bg">
+							<div class="item-bg img-cover fix ">
+								<img src="assets/imgs/hero/h1-img-1.png" alt="">
+							</div>
+
+							<div class="container laa-container-1">
+								<div class="laa-hero-1-slider-item">
+
+									<div class="laa-hero-1-slider-item-content">
+		
+										<h5 class="laa-subtitle-1 hero-subtitle">Logistic Transportation Inc</h5>
+										<h1 class="laa-scn-title-1 hero-title">Your Dedicated Partner in Logistics</h1>
+										<p class="laa-para-1 hero-disc" >Streamlining your logistics with tailored transportation solutions, ensuring timely deliveries and exceptional service worldwide.</p>
+		
+										<div class="btn-box">
+											<a href="#" aria-label="name" class="laa-pr-btn-1">
+												<span class="text" data-back="Learn More" data-front="Learn More"></span>
+												<span class="icon">
+													<i class="fas fa-chevron-right"></i>
+													<i class="fas fa-chevron-right"></i>
+												</span>
+											</a>
+										</div>
+		
+									</div>
+								</div>
+							</div>
+
+							<div class="bg-shape">
+								<svg width="210" height="140" viewBox="0 0 210 140" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<rect opacity="0.2" x="70" y="70" width="70" height="70" fill="white"/>
+									<path opacity="0.32" d="M0 70H70V140H20C8.9543 140 0 131.046 0 120V70Z" fill="#222222"/>
+									<rect opacity="0.06" x="140" y="70" width="70" height="70" fill="white"/>
+									<rect opacity="0.1" x="70" width="70" height="70" fill="white"/>
+								</svg>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- slider-btn -->
+		<div class="laa-hero-1-slider-btn">
+			<div class="container laa-container-1">
+				<div class="laa-hero-1-slider-btn-wrap">
+
+					<div class="laa-left-btn laa-h1-slider-prev">
+						<svg  fill="none" xmlns="http://www.w3.org/2000/svg">
+							<g >
+							<path d="M20 24L12 16L20 8" stroke="white" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
+							</g>
+						</svg>
+						<span class="line"></span>
+					</div>
+
+					<div class="laa-right-btn laa-h1-slider-next">
+						<svg  fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path d="M12 24L20 16L12 8" stroke="#1A2D4E" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
+						</svg>
+							
+						<span class="line"></span>
+					</div>
+
+				</div>
+			</div>
+		</div>
+		<!-- social -->
+		<div class="laa-hero-1-social">
+			<a class="laa-hero-1-social-link" href="#" aria-label="name">
+				<span class="icon">
+					<i class="fab fa-facebook-f"></i>
+				</span>
+				<span class="text">
+					<span>facebook</span>
+				</span>
+			</a>
+			<a class="laa-hero-1-social-link" href="#" aria-label="name">
+				<span class="icon">
+					<i class="fab fa-linkedin-in"></i>
+				</span>
+				<span class="text">
+					<span>linkedin</span>
+				</span>
+			</a>
+			<a class="laa-hero-1-social-link" href="#" aria-label="name">
+				<span class="icon">
+					<svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M9.96087 6.08876C10.3215 5.70003 10.6709 5.32423 11.0198 4.94729C12.5067 3.34127 13.9942 1.73636 15.4783 0.128083C15.5654 0.0337103 15.6536 -0.00167962 15.7811 0.000567356C16.2266 0.00787004 16.6726 0.00337608 17.1726 0.00337608C14.9857 2.36551 12.8319 4.6917 10.6647 7.03249C13.105 10.294 15.5429 13.5532 18 16.8378C17.9039 16.8422 17.8444 16.8467 17.7854 16.8467C16.1356 16.8473 14.4863 16.8456 12.8364 16.8501C12.6982 16.8507 12.6157 16.8074 12.5337 16.6973C10.9658 14.5947 9.3935 12.4955 7.82174 10.3951C7.78523 10.3462 7.74703 10.299 7.69928 10.2367C7.35156 10.6108 7.01114 10.9776 6.67072 11.3444C5.02537 13.1212 3.37946 14.8969 1.73804 16.6771C1.62569 16.799 1.51559 16.8574 1.34482 16.8518C0.916206 16.8389 0.487595 16.8479 0 16.8479C2.34866 14.311 4.66417 11.8101 6.99541 9.29239C4.6872 6.20729 2.38124 3.12443 0.0567363 0.0174197C0.138751 0.0112405 0.18987 0.00393783 0.240989 0.00393783C1.90319 0.00337608 3.56483 0.00449957 5.22704 5.61131e-06C5.35793 -0.000556134 5.43657 0.041013 5.51409 0.145498C6.93924 2.05655 8.36832 3.96424 9.79684 5.87305C9.84739 5.9399 9.89851 6.00675 9.96087 6.08876ZM2.36776 1.15608C2.42168 1.23472 2.4537 1.28415 2.48853 1.33078C2.6975 1.61053 2.90703 1.88972 3.11656 2.16947C6.45614 6.63365 9.79627 11.0973 13.1336 15.5637C13.2055 15.6598 13.2797 15.689 13.3937 15.6884C14.0925 15.6839 14.7913 15.6862 15.4907 15.6862C15.5429 15.6862 15.5952 15.6862 15.6811 15.6862C15.6165 15.5946 15.5738 15.53 15.5272 15.4682C14.4812 14.07 13.4341 12.6724 12.3882 11.2742C9.89907 7.9487 7.41054 4.62317 4.92538 1.29483C4.84674 1.18922 4.76528 1.15214 4.63608 1.15327C3.94345 1.15945 3.25026 1.15608 2.55763 1.15608C2.50538 1.15608 2.45314 1.15608 2.36776 1.15608Z" fill="white"/>
+					</svg>
+				</span>
+				<span class="text">
+					<span>twitter</span>
+				</span>
+			</a>
+			<a class="laa-hero-1-social-link" href="#" aria-label="name">
+				<span class="icon">
+					<i class="fab fa-instagram"></i>
+				</span>
+				<span class="text">
+					<span>instagram</span>
+				</span>
+			</a>
+		</div>
+
+
+	</div>
+	<!-- hero-end -->
+
+	<!-- services-start -->
+	<div class="laa-services-1-area">
+		<div class="container laa-container-1">
+			<div class="laa-services-1-slider">
+				<div class="swiper-container fix laa-s1-active">
+					<div class="swiper-wrapper">
+
+						<!-- single-item -->
+						<div class="swiper-slide">
+							<div class="laa-services-1-slider-item">
+								<div class="text-right mb-80">
+									<a href="#" aria-label="name" class="item-btn ">
+										<svg class="laa-progress-btn laa-ml-auto" width="64" height="64" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<circle opacity="0.16" cx="32" cy="32" r="31" stroke="#F62459" stroke-width="2"/>
+											<mask id="path-2-inside-1_3_174" fill="white">
+											<path d="M32 0C40.1391 9.70579e-08 47.9724 3.10141 53.9055 8.67301L51.715 11.0057C46.3751 5.99127 39.3252 3.2 32 3.2L32 0Z"/>
+											</mask>
+											<path d="M32 0C40.1391 9.70579e-08 47.9724 3.10141 53.9055 8.67301L51.715 11.0057C46.3751 5.99127 39.3252 3.2 32 3.2L32 0Z" stroke="#F62459" stroke-width="4" mask="url(#path-2-inside-1_3_174)"/>
+											<path d="M27 37L37 27" stroke="#F62459" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+											<path d="M27 27H37V37" stroke="#F62459" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+										</svg>
+									</a>
+								</div>
+
+
+								<span class="item-fadeup" >
+									<h5 class="item-subtitle laa-heading-1 laa-font-500">
+										<span>1.</span>
+										<span>warehousing</span>
+									</h5>
+								</span>
+								<span class="item-fadeup" >
+									<h4 class="item-title laa-heading-1 laa-font-600" >
+										<a href="#" aria-label="name">Reliable Logistic Solutions for Global Transportation<span>.</span></a>
+									</h4>
+								</span>
+
+								<div class="item-line"></div>
+								<span class="item-fadeup" >
+									<div class="content-wrap ">
+										<p class="item-disc laa-para-1 laa-font-400 text-capitalize">What We Do:</p>
+	
+										<h4 class="item-counter laa-heading-1">
+											<span>01</span>
+											<span>/</span>
+											<span>03</span>
+										</h4>
+									</div>
+								</span>
+
+							</div>
+						</div>
+
+						<!-- single-item -->
+						<div class="swiper-slide">
+							<div class="laa-services-1-slider-item">
+								<div class="text-right mb-80">
+									<a href="#" aria-label="name" class="item-btn ">
+										<svg class="laa-progress-btn laa-ml-auto" width="64" height="64" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<circle opacity="0.16" cx="32" cy="32" r="31" stroke="#F62459" stroke-width="2"/>
+											<mask id="path-2-inside-1_3_174" fill="white">
+											<path d="M32 0C40.1391 9.70579e-08 47.9724 3.10141 53.9055 8.67301L51.715 11.0057C46.3751 5.99127 39.3252 3.2 32 3.2L32 0Z"/>
+											</mask>
+											<path d="M32 0C40.1391 9.70579e-08 47.9724 3.10141 53.9055 8.67301L51.715 11.0057C46.3751 5.99127 39.3252 3.2 32 3.2L32 0Z" stroke="#F62459" stroke-width="4" mask="url(#path-2-inside-1_3_174)"/>
+											<path d="M27 37L37 27" stroke="#F62459" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+											<path d="M27 27H37V37" stroke="#F62459" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+										</svg>
+									</a>
+								</div>
+
+								<span class="item-fadeup" >
+									<h5 class="item-subtitle laa-heading-1 laa-font-500">
+										<span>1.</span>
+										<span>warehousing</span>
+									</h5>
+								</span>
+								<span class="item-fadeup" >
+									<h4 class="item-title laa-heading-1 laa-font-600" >
+										<a href="#" aria-label="name">Reliable Logistic Solutions for Global Transportation<span>.</span></a>
+									</h4>
+								</span>
+
+								<div class="item-line"></div>
+								<span class="item-fadeup" >
+									<div class="content-wrap ">
+										<p class="item-disc laa-para-1 laa-font-400 text-capitalize">What We Do:</p>
+	
+										<h4 class="item-counter laa-heading-1">
+											<span>01</span>
+											<span>/</span>
+											<span>03</span>
+										</h4>
+									</div>
+								</span>
+
+							</div>
+						</div>
+
+						<!-- single-item -->
+						<div class="swiper-slide">
+							<div class="laa-services-1-slider-item">
+								<div class="text-right mb-80">
+									<a href="#" aria-label="name" class="item-btn ">
+										<svg class="laa-progress-btn laa-ml-auto" width="64" height="64" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
+											<circle opacity="0.16" cx="32" cy="32" r="31" stroke="#F62459" stroke-width="2"/>
+											<mask id="path-2-inside-1_3_174" fill="white">
+											<path d="M32 0C40.1391 9.70579e-08 47.9724 3.10141 53.9055 8.67301L51.715 11.0057C46.3751 5.99127 39.3252 3.2 32 3.2L32 0Z"/>
+											</mask>
+											<path d="M32 0C40.1391 9.70579e-08 47.9724 3.10141 53.9055 8.67301L51.715 11.0057C46.3751 5.99127 39.3252 3.2 32 3.2L32 0Z" stroke="#F62459" stroke-width="4" mask="url(#path-2-inside-1_3_174)"/>
+											<path d="M27 37L37 27" stroke="#F62459" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+											<path d="M27 27H37V37" stroke="#F62459" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+										</svg>
+									</a>
+								</div>
+
+								<span class="item-fadeup" >
+									<h5 class="item-subtitle laa-heading-1 laa-font-500">
+										<span>1.</span>
+										<span>warehousing</span>
+									</h5>
+								</span>
+								<span class="item-fadeup" >
+									<h4 class="item-title laa-heading-1 laa-font-600" >
+										<a href="#" aria-label="name">Reliable Logistic Solutions for Global Transportation<span>.</span></a>
+									</h4>
+								</span>
+
+								<div class="item-line"></div>
+								<span class="item-fadeup" >
+									<div class="content-wrap ">
+										<p class="item-disc laa-para-1 laa-font-400 text-capitalize">What We Do:</p>
+	
+										<h4 class="item-counter laa-heading-1">
+											<span>01</span>
+											<span>/</span>
+											<span>03</span>
+										</h4>
+									</div>
+								</span>
+
+							</div>
+						</div>
+						
+					</div>
+				</div>
+
+			</div>
+		</div>
+	</div>
+	<!-- services-end -->
+
+		
 
 	<!-- For Js Library -->
 	<script src="assets/js/jquery-3.7.0.min.js"></script>
@@ -122,6 +573,7 @@
 	<script src="assets/js/split-type.min.js"></script>
 	<script src="assets/js/ScrollTrigger.min.js"></script>
 	<script src="assets/js/SplitText.min.js"></script>
+	<script src="assets/js/main.js"></script>
 	<script src="assets/js/script.js"></script>
 </body>
 </html>
