--- a/logistic-html/index-7.html
+++ b/logistic-html/index-7.html
@@ -104,7 +104,7 @@
 			<div class="laa-header-1-main">
 
 				<!-- logo -->
-				<a class="laa-header-main-logo" href="index-7.html" aria-label="name">
+				<a class="laa-header-1-main-logo" href="index-7.html" aria-label="name">
 					<img src="assets/imgs/logo/logo-1.svg" alt="">
 				</a>
 
@@ -405,20 +405,28 @@
 				<div class="swiper-container fix laa-s1-active">
 					<div class="swiper-wrapper">
 
+
+						
+						<svg width="206" height="206" viewBox="-25.75 -25.75 257.5 257.5" version="1.1" xmlns="http://www.w3.org/2000/svg" style="transform:rotate(-90deg)">
+							<circle r="93" cx="103" cy="103" fill="transparent" stroke="#e0e0e0" stroke-width="5" stroke-dasharray="584.0400000000001px" stroke-dashoffset="0"></circle>
+							<circle r="93" cx="103" cy="103" stroke="#76e5b1" stroke-width="8" stroke-linecap="butt" stroke-dashoffset="450px" fill="transparent" stroke-dasharray="584.0400000000001px"></circle>
+						</svg>
+							
+
 						<!-- single-item -->
 						<div class="swiper-slide">
 							<div class="laa-services-1-slider-item">
 								<div class="text-right mb-80">
 									<a href="#" aria-label="name" class="item-btn ">
-										<svg class="laa-progress-btn laa-ml-auto" width="64" height="64" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg">
-											<circle opacity="0.16" cx="32" cy="32" r="31" stroke="#F62459" stroke-width="2"/>
-											<mask id="path-2-inside-1_3_174" fill="white">
-											<path d="M32 0C40.1391 9.70579e-08 47.9724 3.10141 53.9055 8.67301L51.715 11.0057C46.3751 5.99127 39.3252 3.2 32 3.2L32 0Z"/>
-											</mask>
-											<path d="M32 0C40.1391 9.70579e-08 47.9724 3.10141 53.9055 8.67301L51.715 11.0057C46.3751 5.99127 39.3252 3.2 32 3.2L32 0Z" stroke="#F62459" stroke-width="4" mask="url(#path-2-inside-1_3_174)"/>
+
+										<svg class="laa-progress-btn" version="1.1" xmlns="http://www.w3.org/2000/svg" >
+											<circle r="36" cx="32" cy="32" fill="transparent" stroke="#000" stroke-width="1" stroke-dasharray="300px" stroke-dashoffset="0"></circle>
+											<circle r="22" cx="32" cy="32" stroke="#76e5b1" stroke-width="8" stroke-linecap="butt" stroke-dashoffset="106px" fill="transparent" stroke-dasharray="138.16px"></circle>
+
 											<path d="M27 37L37 27" stroke="#F62459" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
 											<path d="M27 27H37V37" stroke="#F62459" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
 										</svg>
+
 									</a>
 								</div>
 
