--- a/logistic-html/index-7.html
+++ b/logistic-html/index-7.html
@@ -259,13 +259,13 @@
 							<div class="container laa-container-1">
 								<div class="laa-hero-1-slider-item">
 
-									<div class="laa-hero-1-slider-item-content">
+									<div class="laa-hero-1-slider-item-content fix">
 		
-										<h5 class="laa-subtitle-1 hero-subtitle">Logistic Transportation Inc</h5>
-										<h1 class="laa-scn-title-1 hero-title" txaa-split-text-1>Your Dedicated Partner in Logistics</h1>
-										<p class="laa-para-1 hero-disc" >Streamlining your logistics with tailored transportation solutions, ensuring timely deliveries and exceptional service worldwide.</p>
+										<h5 class="laa-subtitle-1 hero-subtitle heroslideright">Logistic Transportation Inc</h5>
+										<h1 class="laa-scn-title-1 hero-title txaa-split-text-1" >Your Dedicated Partner in Logistics</h1>
+										<p class="laa-para-1 hero-disc heroslideright" >Streamlining your logistics with tailored transportation solutions, ensuring timely deliveries and exceptional service worldwide.</p>
 		
-										<div class="btn-box">
+										<div class="btn-box heroslideright">
 											<a href="#" aria-label="name" class="laa-pr-btn-1">
 												<span class="text" data-back="Learn More" data-front="Learn More"></span>
 												<span class="icon">
@@ -280,11 +280,11 @@
 							</div>
 
 							<div class="bg-shape">
-								<svg width="210" height="140" viewBox="0 0 210 140" fill="none" xmlns="http://www.w3.org/2000/svg">
-									<rect  x="70" y="70" width="70" height="70" fill="#ffffff33"/>
-									<path  d="M0 70H70V140H20C8.9543 140 0 131.046 0 120V70Z" fill="#22222252"/>
-									<rect  x="140" y="70" width="70" height="70" fill="#ffffff0f"/>
-									<rect  x="70" width="70" height="70" fill="#ffffff1a"/>
+								<svg class="laa-ani-box" width="210" height="140" viewBox="0 0 210 140" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<rect class="laa-ani-box-2"  x="70" y="70" width="70" height="70" fill="#ffffff33"/>
+									<path class="laa-ani-box-1" d="M0 70H70V140H20C8.9543 140 0 131.046 0 120V70Z" fill="#22222252"/>
+									<rect class="laa-ani-box-3"  x="140" y="70" width="70" height="70" fill="#ffffff0f"/>
+									<rect class="laa-ani-box-4"  x="70" width="70" height="70" fill="#ffffff1a"/>
 								</svg>
 							</div>
 						</div>
@@ -300,13 +300,13 @@
 							<div class="container laa-container-1">
 								<div class="laa-hero-1-slider-item">
 
-									<div class="laa-hero-1-slider-item-content">
+									<div class="laa-hero-1-slider-item-content fix">
 		
-										<h5 class="laa-subtitle-1 hero-subtitle">Logistic Transportation Inc</h5>
-										<h1 class="laa-scn-title-1 hero-title">Your Dedicated Partner in Logistics</h1>
-										<p class="laa-para-1 hero-disc" >Streamlining your logistics with tailored transportation solutions, ensuring timely deliveries and exceptional service worldwide.</p>
+										<h5 class="laa-subtitle-1 hero-subtitle heroslideright">Logistic Transportation Inc</h5>
+										<h1 class="laa-scn-title-1 hero-title txaa-split-text-1" >Your Dedicated Partner in Logistics</h1>
+										<p class="laa-para-1 hero-disc heroslideright" >Streamlining your logistics with tailored transportation solutions, ensuring timely deliveries and exceptional service worldwide.</p>
 		
-										<div class="btn-box">
+										<div class="btn-box heroslideright">
 											<a href="#" aria-label="name" class="laa-pr-btn-1">
 												<span class="text" data-back="Learn More" data-front="Learn More"></span>
 												<span class="icon">
@@ -321,15 +321,16 @@
 							</div>
 
 							<div class="bg-shape">
-								<svg width="210" height="140" viewBox="0 0 210 140" fill="none" xmlns="http://www.w3.org/2000/svg">
-									<rect  x="70" y="70" width="70" height="70" fill="#ffffff33"/>
-									<path  d="M0 70H70V140H20C8.9543 140 0 131.046 0 120V70Z" fill="#22222252"/>
-									<rect  x="140" y="70" width="70" height="70" fill="#ffffff0f"/>
-									<rect  x="70" width="70" height="70" fill="#ffffff1a"/>
+								<svg class="laa-ani-box" width="210" height="140" viewBox="0 0 210 140" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<rect class="laa-ani-box-2"  x="70" y="70" width="70" height="70" fill="#ffffff33"/>
+									<path class="laa-ani-box-1" d="M0 70H70V140H20C8.9543 140 0 131.046 0 120V70Z" fill="#22222252"/>
+									<rect class="laa-ani-box-3"  x="140" y="70" width="70" height="70" fill="#ffffff0f"/>
+									<rect class="laa-ani-box-4"  x="70" width="70" height="70" fill="#ffffff1a"/>
 								</svg>
 							</div>
 						</div>
 					</div>
+
 				</div>
 			</div>
 		</div>
